prometheus/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: prometheus
  annotations:
    cert-manager.io/cluster-issuer: mainissuer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.internal.kreato.dev`)
      priority: 10
      services:
        - kind: Service
          name: prometheus-grafana
          namespace: prometheus
          passHostHeader: true
          port: 80
          scheme: http
  tls:
    secretName: wildcard-kreato.dev-tls
    domains:
      - main: grafana.internal.kreato.dev
